--- a/web/test.html
+++ b/web/test.html
@@ -7,7 +7,8 @@
   <script src="asq.src.js"></script>
   <script src="asqRest.js"></script>
   <script src="test.js"></script>
-<head>
+</head>
+<body>
 
 Test AsqRest
 
@@ -16,5 +17,5 @@ Test AsqRest
 <script>
 main();
 </script>
-
-</head>	
+</body>
+</html>	
