--- a/web/test.html
+++ b/web/test.html
@@ -6,6 +6,8 @@
   <script src="jquery-1.10.2.min.js"></script>
   <script src="asq.src.js"></script>
   <script src="asqRest.js"></script>
+  <script src="asqRest2.js"></script>
+  
   <script src="test.js"></script>
 </head>
 <body>
