--- a/web/test.html
+++ b/web/test.html
@@ -5,14 +5,14 @@
   <title>AsqRest</title>
   <script src="jquery-1.10.2.min.js"></script>
   <script src="asq.src.js"></script>
-  <script src="asqRest.js"></script>
-  <script src="asqRest2.js"></script>
+  <script src="SimpleRestClient.js"></script>
+  <script src="RestClientAutoLoader.js"></script>
   
   <script src="test.js"></script>
 </head>
 <body>
 
-Test AsqRest
+
 
 <div id="viewDiv"> </div>
 
